kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-app
  labels:
    app: expense
spec:
  replicas: 2
  selector:
    matchLabels:
      app: expense
  template:
    metadata:
      labels:
        app: expense
    spec:
      containers:
        - name: expense
          image: iamamanul/expense-tracker-ai:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
