kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-service
spec:
  type: ClusterIP
  selector:
    app: expense
  ports:
    - port: 3000
      targetPort: 3000
